Añadido el registro de usuario con JSON y validacion

--- a/IniciarS-Registrarte/registrarte.html
+++ b/IniciarS-Registrarte/registrarte.html
@@ -171,7 +171,7 @@
 
 
     <!-- Scripts -->
-    <script src="../js/RegistroUsuarios.js"></script>
+    <script src="../js/validarRegistro.js"></script>
     <script src="../js/mostrarContra.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="../js/bootstrap.bundle.min.js"></script>
