--- a/app/productos.html
+++ b/app/productos.html
@@ -399,7 +399,7 @@
         </div>
     </footer>
 
-    <script src="../js/efectocarrito"></script>
+    <script src="../js/efectocarrito.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
