--- a/IniciarS-Registrarte/registrarte.html
+++ b/IniciarS-Registrarte/registrarte.html
@@ -41,8 +41,8 @@
                 </div>
 
                 <div class="col-6">
-                    <div class="formulario p-3 text-center">
-                        <form method="get" action="../index.html">
+                    <div id="formulario" name="formulario" class="formulario p-3 text-center">
+                        <form method="get" action="iniciarSesion.html">
                             <div class="d-flex justify-content-center">
                                 <table>
                                     <tr>
@@ -69,10 +69,12 @@
                             
                             <br />
                             <input class="boton" type="submit" value="Regístrate">
-                            <br>
-                            <div id="errores" class="errores"></div>
-                            <br><br>
-                            <a href="iniciarSesion.html">Iniciar Sesión</a>
+                            <div class="container">
+                                <div class="row justify-content-center align-content-center">
+                                    <div id="errores" class="col-auto errores"></div>
+                                </div>
+                            </div>
+                            <a class="mt-3" href="iniciarSesion.html">Iniciar Sesión</a>
                         </form>
                     </div>
                 </div>
