Carrousel termimnado, Aplicacion acabada

--- a/app/nosotros.html
+++ b/app/nosotros.html
@@ -100,11 +100,11 @@
             
                   </div>
                   <div class="slide2 carousel-item">
-                    <img src="../img/OIP.jfif">
+                    <img src="../img/peluqueria1.jpg">
 
                   </div>
                   <div class="slide3 carousel-item">
-                    <img src="../img/IniciarS.jpg">
+                    <img src="../img/peluqueria2.jpg">
                   </div>
                 </div>
                 <button class="botonI carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
@@ -115,7 +115,7 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+              </div> 
         </section>
 
         <hr class="hr80">
@@ -255,19 +255,11 @@
 </footer>
 
 
-
+    <!-- JQUERY -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js%22%3E"></script>
     <!-- Bootstrap JavaScript Libraries -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
 
-    <script src="../js/bootstrap.min.js"></script>
-
-    <script>
-        var myModal = document.getElementById('modal')
-        var myInput = document.getElementById('input')
-
-        myModal.addEventListener('shown.bs.modal', function () {
-            myInput.focus()
-        })
-    </script>
 </body>
 
 </html>
