--- a/app/productos.html
+++ b/app/productos.html
@@ -18,7 +18,6 @@
 <body>
 
     <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <!-- MENU -->
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -399,7 +398,7 @@
         </div>
     </footer>
 
-    <script src="../js/efectocarrito.js"></script>
+    <script src="../js/efectocarrito"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
