--- a/IniciarS-Registrarte/iniciarSesion.html
+++ b/IniciarS-Registrarte/iniciarSesion.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+    <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
     <div class="bloque container mt-5">
         <!-- Primera fila -->
         <div class="col-12">
