--- a/app/productos.html
+++ b/app/productos.html
@@ -20,7 +20,7 @@
     <script type='text/javascript' src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -34,33 +34,34 @@
                             <p class="subtitulo text-center">Beuty Concept</p>
                         </div>
                         <div class="col-12">
-                            <ul class="navbar-nav pb-0 ">
-                                <li class="nav-item mx-2 col-xl-3 col-lg-2 col-md-2 text-center">
+                            <ul class="navbar-nav pb-0">
+                                <li class="nav-item mx-2 col-xl-3 col-lg-3 text-center">
                                     <a class="nav-link active" aria-current="page" href="../index.html"><img
                                             src="../img/LOGO.png" alt="logo" width="200px"></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="servicios.html">Servicios</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="servicios.html">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="rituales.html">Rituales</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="rituales.html">Ofertas <i class="fas fa-coins"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="productos.html" tabindex="-1">Productos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="productos.html" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="nosotros.html" tabindex="-1">Nosotros</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="nosotros.html" tabindex="-1">Nosotros <i class="fas fa-photo-video"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="contactanos.html" tabindex="-1">Contáctanos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="contactanos.html" tabindex="-1">Contáctanos <i class="fas fa-id-card"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-4 col-lg-2 col-md-2 text-center mt-4">
-                                    <a href="../IniciarS-Registrarte/iniciarSesion.html"><input id="entrar"
-                                            type="button" value="Entrar"></a>
+
+                                <li class="nav-item mx-2 col-xl-4 col-lg-4 text-center mt-4">
+                                    <button id="Inicio" type="button" value="Inicio" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/iniciarSesion.html"> Iniciar Sesion</button>
+                                    <button id="Registro" type="button" value="Registro" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/registrarte.html"> Registrarse</button>
                                 </li>
+
                             </ul>
                         </div>
-                    </div>
 
                 </div>
             </div>
