--- a/app/servicios.html
+++ b/app/servicios.html
@@ -20,7 +20,7 @@
     <!-- MENU -->
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -34,28 +34,32 @@
                             <p class="subtitulo text-center">Beuty Concept</p>
                         </div>
                         <div class="col-12">
-                            <ul class="navbar-nav pb-0 ">
-                                <li class="nav-item mx-2 col-xl-3 col-lg-2 col-md-2 text-center">
-                                    <a class="nav-link active" aria-current="page" href="../index.html"><img src="../img/LOGO.png" alt="logo" width="200px"></a>
+                            <ul class="navbar-nav pb-0">
+                                <li class="nav-item mx-2 col-xl-3 col-lg-3 text-center">
+                                    <a class="nav-link active" aria-current="page" href="../index.html"><img
+                                            src="../img/LOGO.png" alt="logo" width="200px"></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="servicios.html">Servicios</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="servicios.html">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="rituales.html">Rituales</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="rituales.html">Ofertas <i class="fas fa-coins"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="productos.html" tabindex="-1">Productos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="productos.html" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="nosotros.html" tabindex="-1">Nosotros</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="nosotros.html" tabindex="-1">Nosotros <i class="fas fa-photo-video"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="contactanos.html" tabindex="-1">Contáctanos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="contactanos.html" tabindex="-1">Contáctanos <i class="fas fa-id-card"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-4 col-lg-2 col-md-2 text-center mt-4">
-                                    <a href="../IniciarS-Registrarte/iniciarSesion.html"><input id="entrar" type="button" value="Entrar"></a>
+
+                                <li class="nav-item mx-2 col-xl-4 col-lg-4 text-center mt-4">
+                                    <button id="Inicio" type="button" value="Inicio" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/iniciarSesion.html"> Iniciar Sesion</button>
+                                    <button id="Registro" type="button" value="Registro" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/registrarte.html"> Registrarse</button>
                                 </li>
+
                             </ul>
                         </div>
                     </div>
@@ -173,6 +177,33 @@
         </section>
         
     </article>
+
+    <!-- Ritual -->
+
+    <article>
+        <section>
+            <div class="container">
+                <h2 id="CORTE">Ritual 1</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos vel soluta recusandae inventore
+                    eius, autem quos molestias cumque corporis minus mollitia reprehenderit tenetur rerum quaerat eos
+                    quasi numquam libero voluptates.
+                    Error quidem magnam illo, dolorem vitae modi vero nobis enim consequuntur cumque repudiandae dolore,
+                    quae voluptatum minus incidunt obcaecati molestiae laudantium ipsum! Eum, nesciunt illo tempore quam
+                    eveniet eos id?
+                    A tempora excepturi, eos repellendus reiciendis totam tenetur non officiis delectus pariatur ab
+                    ipsa, nemo, quia in consectetur illum ea. Necessitatibus unde id enim quam consequatur magnam, quo
+                    ipsum vel.</p>
+                <div class="container col-12">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-auto">
+                            <a href="citas.html"><video src="../img/video/Ritual1.mp4" alt="video ritual 1" width="800px" autoplay muted></video></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </article>
+
 <!-- FOOTER -->
 <footer id="footer" class="footer-1 mt-5">
     <div class="main-footer widgets-dark typo-light">
