--- a/app/contactanos.html
+++ b/app/contactanos.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -34,28 +34,32 @@
                             <p class="subtitulo text-center">Beuty Concept</p>
                         </div>
                         <div class="col-12">
-                            <ul class="navbar-nav pb-0 ">
-                                <li class="nav-item mx-2 col-xl-3 col-lg-2 col-md-2 text-center">
-                                    <a class="nav-link active" aria-current="page" href="../index.html"><img src="../img/LOGO.png" alt="logo" width="200px"></a>
+                            <ul class="navbar-nav pb-0">
+                                <li class="nav-item mx-2 col-xl-3 col-lg-3 text-center">
+                                    <a class="nav-link active" aria-current="page" href="../index.html"><img
+                                            src="../img/LOGO.png" alt="logo" width="200px"></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="servicios.html">Servicios</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="servicios.html">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="rituales.html">Rituales</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="rituales.html">Ofertas <i class="fas fa-coins"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="productos.html" tabindex="-1">Productos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="productos.html" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="nosotros.html" tabindex="-1">Nosotros</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="nosotros.html" tabindex="-1">Nosotros <i class="fas fa-photo-video"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="contactanos.html" tabindex="-1">Contáctanos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="contactanos.html" tabindex="-1">Contáctanos <i class="fas fa-id-card"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-4 col-lg-2 col-md-2 text-center mt-4">
-                                    <a href="../IniciarS-Registrarte/iniciarSesion.html"><input id="entrar" type="button" value="Entrar"></a>
+
+                                <li class="nav-item mx-2 col-xl-4 col-lg-4 text-center mt-4">
+                                    <button id="Inicio" type="button" value="Inicio" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/iniciarSesion.html"> Iniciar Sesion</button>
+                                    <button id="Registro" type="button" value="Registro" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/registrarte.html"> Registrarse</button>
                                 </li>
+
                             </ul>
                         </div>
                     </div>
@@ -67,47 +71,53 @@
 
     <article>
         <!-- card -->
-        <div class="container col-12 mb-5 mt-5 text-center ">
-            <div class="row p-2 justify-content-center align-items-center">
-                <div class="card col-auto pt-2" style="width: 18rem;">
-                    <img src="../img/OIP.jfif" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title ">La Creacion</h5>
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ranked">
-                            Contáctanos
-                        </button>
+        <section class="mt-5">
+            <h2>CONTACT&Aacute;NOS</h2>
+            <div class="container col-12 mb-5 mt-3 text-center ">
+                <div class="row p-2 justify-content-center align-items-center">
+                    <div class="card col-auto pt-2" style="width: 75%;">
+                        <img src="../img/Peluqueria.jpeg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title ">La Creacion</h5>
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ranked">
+                                Contáctanos
+                            </button>
 
-                        <!-- Modal -->
-                        <div class="modal fade" id="ranked" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel"></h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <!-- formulario -->
+                            <!-- Modal -->
+                            <div class="modal fade" id="ranked" tabindex="-1" aria-labelledby="exampleModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel"></h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <!-- formulario -->
 
-                                        <h1 id="title">Formulario</h1>
-                                        <form class="contactame">
-                                            <input type="text" placeholder="Nombre">
-                                            <br>
-                                            <input type="email" placeholder="E-mail" class="mt-3">
-                                            <br>
-                                            <textarea type="text" placeholder="Texto" class="mt-3"></textarea>
-                                        </form>
+                                            <h1 id="title">Formulario</h1>
+                                            <form class="contactame">
+                                                <input type="text" placeholder="Nombre">
+                                                <br>
+                                                <input type="email" placeholder="E-mail" class="mt-3">
+                                                <br>
+                                                <textarea type="text" placeholder="Texto" class="mt-3"></textarea>
+                                                <br>
+                                                <p>¿Te Gusta la app?</p>
+                                                <button class="emoji" value="si" type="button" id="Bien" onclick="botonFormularioBien()">&#128512;</button><button class="emoji" value="no" id="Mal" type="button" onclick="botonFormularioMal()">&#128528;</button>
+                                            </form>
 
 
-                                        <!-- formulario -->
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn
-                                                btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                                        <button type="button" class="btn
-                                                btn-primary">Enviar</button>
+                                            <!-- formulario -->
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn
+                                                    btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                            <button type="button" class="btn
+                                                    btn-primary">Enviar</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -115,7 +125,20 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section>
+            <h2>UBICACI&Oacute;N</h2>
+            <div class="container col-12 mt-2">
+                <div class="row justify-content-center align-content-center">
+                    <div class="col-auto ubi">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6357.547476399265!2d-5.772832896527022!3d37.18184774124321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd127f09e81bcc31%3A0xb9a8710dc82f6fa4!2sC.%20Antonio%20Machado%2C%2019%2C%2041710%20Utrera%2C%20Sevilla!5e0!3m2!1ses!2ses!4v1638184583021!5m2!1ses!2ses" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <p class="centrar mt-2">Calle: Antonio Machado 19, 41710, Utrera</p>
+                    </div>
+                </div>
+            </div>
+            <br><br>
+        </section>
+
     </article>
 
 
@@ -215,6 +238,7 @@
     <!-- Bootstrap JavaScript Libraries -->
 
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/botonFormulario.js"></script>
 
     <script>
         var myModal = document.getElementById('modal')
