--- a/app/nosotros.html
+++ b/app/nosotros.html
@@ -21,7 +21,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -35,28 +35,32 @@
                             <p class="subtitulo text-center">Beuty Concept</p>
                         </div>
                         <div class="col-12">
-                            <ul class="navbar-nav pb-0 ">
-                                <li class="nav-item mx-2 col-xl-3 col-lg-2 col-md-2 text-center">
-                                    <a class="nav-link active" aria-current="page" href="../index.html"><img src="../img/LOGO.png" alt="logo" width="200px"></a>
+                            <ul class="navbar-nav pb-0">
+                                <li class="nav-item mx-2 col-xl-3 col-lg-3 text-center">
+                                    <a class="nav-link active" aria-current="page" href="../index.html"><img
+                                            src="../img/LOGO.png" alt="logo" width="200px"></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="servicios.html">Servicios</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="servicios.html">Servicios <i class="fas fa-cut"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="rituales.html">Rituales</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="rituales.html">Ofertas <i class="fas fa-coins"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="productos.html" tabindex="-1">Productos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="productos.html" tabindex="-1">Productos <i class="fab fa-product-hunt"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="nosotros.html" tabindex="-1">Nosotros</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="nosotros.html" tabindex="-1">Nosotros <i class="fas fa-photo-video"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-1 col-lg-2 col-md-2 text-center mt-4">
-                                    <a class="nav-link active" href="contactanos.html" tabindex="-1">Contáctanos</a>
+                                <li class="nav-item mx-2 col-xl-1 col-lg-1 text-center mt-4">
+                                    <a class="nav-link active text-white" href="contactanos.html" tabindex="-1">Contáctanos <i class="fas fa-id-card"></i></a>
                                 </li>
-                                <li class="nav-item mx-2 col-xl-4 col-lg-2 col-md-2 text-center mt-4">
-                                    <a href="../IniciarS-Registrarte/iniciarSesion.html"><input id="entrar" type="button" value="Entrar"></a>
+
+                                <li class="nav-item mx-2 col-xl-4 col-lg-4 text-center mt-4">
+                                    <button id="Inicio" type="button" value="Inicio" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/iniciarSesion.html"> Iniciar Sesion</button>
+                                    <button id="Registro" type="button" value="Registro" class="btn btn-warning" data-toggle="modal" data-target="#Modal" href="../IniciarS-Registrarte/registrarte.html"> Registrarse</button>
                                 </li>
+
                             </ul>
                         </div>
                     </div>
@@ -145,19 +149,6 @@
                 </div>
             </div>
                 <h5 class="trabajadores">TRABAJADOR 2</h5>
-        </section>
-        <hr class="hr50">
-        <section>
-            <h2>UBICACION</h2>
-            <div class="container col-12 mt-2">
-                <div class="row justify-content-center align-content-center">
-                    <div class="col-auto">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6357.547476399265!2d-5.772832896527022!3d37.18184774124321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd127f09e81bcc31%3A0xb9a8710dc82f6fa4!2sC.%20Antonio%20Machado%2C%2019%2C%2041710%20Utrera%2C%20Sevilla!5e0!3m2!1ses!2ses!4v1638184583021!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        <p class="centrar mt-2">Calle: Antonio Machado 19, 41710, Utrera</p>
-                    </div>
-                </div>
-            </div>
-            
         </section>
 
     </article>
