probando diseños servicio como en productos

--- a/app/servicios.html
+++ b/app/servicios.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/productos.css">
+
     <!-- link para iconos -->
     <link rel="stylesheet" href="../css/fontawesome-free-5.15.4-web/css/all.min.css">
     <title>Servicios</title>
@@ -79,6 +81,47 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos vel soluta recusandae inventore eius, autem quos molestias cumque corporis minus mollitia reprehenderit tenetur rerum quaerat eos quasi numquam libero voluptates.
                 Error quidem magnam illo, dolorem vitae modi vero nobis enim consequuntur cumque repudiandae dolore, quae voluptatum minus incidunt obcaecati molestiae laudantium ipsum! Eum, nesciunt illo tempore quam eveniet eos id?
                 A tempora excepturi, eos repellendus reiciendis totam tenetur non officiis delectus pariatur ab ipsa, nemo, quia in consectetur illum ea. Necessitatibus unde id enim quam consequatur magnam, quo ipsum vel.</p>
+                
+                <div class="slider carousel col-12 mt-5">
+                    <div class="row justify-content-center">
+                        <div class="producto item">
+                            <div class="contenedor-imagen">
+                                <a href="#" class="link"></a>
+                                <img src="../img/Servicios/CORTE1.jpg" class="img-nohover">
+                                <img src="../img/Servicios/CORTE1.jpg" class="img-hover">
+                            </div>
+                            <div class="datos">
+                                <div class="starrr"></div>
+                                <h4>Corte</h4>
+                                <small  id="nombreProducto">Degradado</small>
+                            </div>
+                            <div class="precios">
+                                <div>
+                                    <small>Precio</small>
+                                    <span id="precioProducto">8€</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="producto item">
+                            <div class="contenedor-imagen">
+                                <a href="#" class="link"></a>
+                                <img src="../img/Servicios/CORTE2.jpg" class="img-nohover">
+                                <img src="../img/Servicios/CORTE2.jpg" class="img-hover">
+                            </div>
+                            <div class="datos">
+                                <div class="starrr"></div>
+                                <h4>Corte</h4>
+                                <small  id="nombreProducto">Degradado</small>
+                            </div>
+                            <div class="precios">
+                                <div>
+                                    <small>Precio</small>
+                                    <span id="precioProducto">8€</span>
+                                </div>
+                            </div>
+                        </div>
+                
                 <div class="container">
                     <div class="col-12">
                         <div class="row">
